1999-06-14  Elliot Lee  <sopwith@redhat.com>

	* esdlib.c: Fix bug #1276 - don't try to auto-spawn if $ESPEAKER is set.

Tue Jun  8 18:13:22 1999  John Ellis  <johne@bellatlantic.net>

	* esdmgr.c esd_get_all_info(): Fix memory leaks: player_info and
	sample_info were not being freed after the do .. while loops.

Tue Jun  8 17:00:54 1999 Timur Bakeyev <mc@bat.ru>

	* audio_oss.c: #ifdef'ed SNDCTL_DSP_SETDUPLEX, as it doesn't exist in OSS
	3.0.9 under BSDI3...
	
	* configure.in, acconfig.h: Due to lack of INADDR_LOOPBACK in my OS (BSDI3)
	here is the check against it's presence in netinet/in.h, and if not, defining
	it ourselves.
	
Wed Apr 21 15:10:19 EDT 1999 The Rasterman <raster@rasterman.com>
	* esdlib.c, esd.h, proto.c: added "latency" request protocol to request
          number of smaples of latency you have with a stream to esd.
	  
1999-04-12  Elliot Lee  <sopwith@redhat.com>

	* esdlib.c, esd_config.c, esd.conf, configure.in, Makefile.am:
	  Use a proper config file ($(sysconfdir)/esd.conf, ~/.esd.conf),
	  and fix auto-spawning of esd.

1999-04-11  James Henstridge <james@daa.com.au>

	* esound.spec.in: moved %{prefix}/lib/lib*.so files to the main
	esound package from the devel one, as esddsp requires them to
	function correctly.

Thu Apr  8 23:08:56 PDT 1999 Manish Singh <yosh@gimp.org>

	* acinclude.m4
	* ltconfig
	* ltmain.sh: libtool 1.2f

	* esd.c: use INADDR constants instead of inet_addr calls (was
	broken before)

	* esddsp.c: minor tweaks

1999-03-30  The Rasterman <raster@rasterman.com>
        * esdlib.c, esd.c: added UNIX domain sockets as the "default" 
	  (less overhead than tcp/ip for a local machine - better for
	  less soudn breakup) - as well as =ctp option for tcp/ip mode.
	  Also made esd auto fallback to 8bit, mono and lower sampling
	  rates if the device cannot handle it.
	  
1999-03-09  The Rasterman <raster@rasterman.com>
	* esdlib.c, esd.c: added SIGPIPE handlers and wrappign in all 